archive/deploy/production/deployment-slave.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: slave-ingress
  namespace: sige-slave-production
  labels:
    app: sige-slave-production
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: sige-slave.lappis.rocks
      http:
        paths:
          - backend:
              serviceName: slave-svc
              servicePort: 80
  tls:
    - hosts:
        - sige-slave.lappis.rocks
      secretName: sige-slave-production-letsencrypt-prod-crt
---
apiVersion: v1
kind: Service
metadata:
  name: slave-svc
  namespace: sige-slave-production
  labels:
    app: sige-slave-production
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: sige-slave-production
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: slave-deployment
  namespace: sige-slave-production
  labels:
    app: sige-slave-production
spec:
  selector:
    matchLabels:
      app: sige-slave-production
  replicas: 1
  template:
    metadata:
      labels:
        app: sige-slave-production
    spec:
      containers:
        - name: sige-slave-production
          image: registry.lappis.rocks/sige-slave:latest
          command: ["sh", "scripts/start.sh"]
          ports:
            - containerPort: 8000
              protocol: TCP
